# gooding-lambert

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  llm-context.md
csrc/: lamb.c  lamb.f  test_lambert  test_lambert.c
docs/: gooding-lambert.md  llm-context.md
docs/algorithms/: gooding-lambert.md
src/: gooding.rs  lib.rs
tests/: cross_validate.rs  cross_validate_c.rs  cross_validate_gooding.rs  input_validation.rs  round_trip.rs
tests/common/: mod.rs
